--- a/homework.ipynb
+++ b/homework.ipynb
@@ -88,27 +88,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 76,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p1 =  (10 + 90 * 0.5) / 100 * 100"
+        "p1 =  (10 + 90 * 0.5) / 100 "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 77,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "55.00000000000001"
+              "0.55"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 77,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -585,14 +585,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 78,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "from scipy.stats import pearsonr\n",
         "corr, p_value = pearsonr(x9, y9)\n",
-        "p9 = p_value > 0.05\n"
+        "p9 = bool(p_value > 0.05)\n"
       ]
     },
     {
